# UnrealGitUI

./: .gitignore  README.md  format-python.cmd  pyproject.toml  run.py
main/: _template.py  config.json  config.py  errors.py  main.py
main/ctk_external_modules/: CTkCollapsibleFrame.py
main/github_tools/: dashboard.py  token.py
main/ui/tabs/: dashboard.py  terminal.py
tests/: test_config_and_files.py  test_dummy.py  test_gui_safety.py  test_import.py  test_run_cli.py
